--- a/index2.html
+++ b/index2.html
@@ -25,12 +25,12 @@
             <a class="logo" href="#">Logo</a>
         
             <nav class="nav">
-                <a href="#">Home</a>
-                <a href="#">Product</a>
-                <a href="#">About</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
-                <a href="">Follow me</a>
+                <a href="index.html">Layout 1</a>
+                <a href="index2.html">Layout 2</a>
+                <a href="index3.html">Layout 3</a>
+                <a href="index4.html">Layout 4</a>
+                <a href="index5.html">Layout 5</a>
+    
             </nav>
         </div>
     </header>
