--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
-    <title>Homework Four</title>
+    <title>Homework Five</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,7 +30,6 @@
         <div class="box-container">
             <div class="box">
             <h1>Main Container/ Banner</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque rem maxime harum fugit excepturi! Ad, expedita sint asperiores exercitationem, autem pariatur a, saepe vel nesciunt deleniti quae amet corporis beatae!</p>
         </div>
         </div>
     </section>
@@ -38,7 +37,6 @@
         <div class="box-container">
             <div class="box">
             <h1>Intro Text</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque rem maxime harum fugit excepturi! Ad, expedita sint asperiores exercitationem, autem pariatur a, saepe vel nesciunt deleniti quae amet corporis beatae!</p>
         </div>
     </section>
     <section class="main-container" id="layout3">
@@ -57,10 +55,10 @@
                 </aside>
             </div>
             <div class="box content">
-                2
+                <p>Header / Banner</p>
              </div>
-            <div class="box rightsidebar">
-                3
+            <div class="box body-area">
+                <p>Body Area</p>
             </div>
             
         </div>
