--- a/index5.html
+++ b/index5.html
@@ -23,14 +23,13 @@
 
     <header class="layout5">
         <div class="logo-container">
-            <a class="logo" href="#">Logo</a>
+            <a class="logo" href="#">COMPANY lOGO AND SLOGAN</a>
         </div>
     </header>
     <section id="intro" class="banner">
         <div class="box-container">
             <div class="box">
             <h1>Main Container/ Banner</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque rem maxime harum fugit excepturi! Ad, expedita sint asperiores exercitationem, autem pariatur a, saepe vel nesciunt deleniti quae amet corporis beatae!</p>
         </div>
         </div>
     </section>
@@ -46,8 +45,10 @@
     <section class="main-container" id="layout5">
         <div class="box-container">
             <div class="box item1">
-                <h1>About me</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium fugit, eveniet doloremque, velit ipsam, eos impedit nam dignissimos odio porro nemo! Dignissimos, maxime. Aperiam deleniti quae reiciendis velit modi magni?</p>
+                <div class="content-info">
+                    <h1>About me</h1>
+                </div>
+                
             </div>
             <div class="box item2">
                 <h3>Quick Link</h3>
