--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header id="header_layout1">
         <div class="logo-container">
             <a class="logo" href="#">Logo</a>
         </div>
@@ -45,12 +45,11 @@
         <div class="box-container">
             <div class="box sidebar">
                 <aside>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio aut, recusandae facilis possimus mollitia harum modi quas assumenda delectus, eum nobis nam accusamus dignissimos fugit reiciendis itaque, architecto quisquam praesentium.
+                    <p>Sidebar</p>
                 </aside>
             </div>
             <div class="box content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum explicabo reprehenderit praesentium architecto. Exercitationem officiis totam enim rerum deleniti eligendi iusto voluptates, sed autem similique laudantium, mollitia necessitatibus quidem iste.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quo exercitationem excepturi veniam delectus earum? Numquam saepe quis et, adipisci, illum facere dignissimos laudantium porro ullam rerum quidem distinctio iure quisquam ipsam qui officiis doloremque maxime sed, quod incidunt commodi enim est recusandae quo. Nostrum temporibus, dolore voluptas iure pariatur distinctio animi, maxime assumenda, voluptatem accusamus illum asperiores quis praesentium consequuntur officia atque ut modi numquam fugiat perspiciatis! Vero deserunt quas nobis, sint id tempore ab delectus ex optio harum. Cumque animi doloremque maxime quae ipsum. Temporibus, vitae enim atque voluptatibus autem voluptatum tempore ipsum animi doloremque unde aliquam fugiat?</p>
+                <p>Body area</p>
             </div>
         </div>
     </section>
