--- a/index.html
+++ b/index.html
@@ -56,5 +56,34 @@
     <footer>
         <p>&copy;Copyright By <strong>Aklima akther</strong><span>Ruhina</span></p>
     </footer>
+    <style type="text/css">
+    .main_body{
+        display: block;
+        width: 100%;
+        float: left;
+        padding: 1px 15px;
+    }
+    .blank{
+        width:24%;
+        margin:5px;
+        display: inline-block;
+        float: left;
+        height: 250px;
+        background: gray;
+        border: 1px solid black;
+    }
+    .blank:last-child{margin-right:0;}
+    </style>
+    <div class="main_body">
+    <div class="blank blank1"></div>
+    <div class="blank blank2"></div>
+    <div class="blank blank3"></div>
+    <div class="blank blank4"></div>
+    <div class="blank blank5"></div>
+    <div class="blank blank6"></div>
+    <div class="blank blank7"></div>
+    <div class="blank blank8"></div>
+</div>
 </body>
 </html>
+
